@@ -4,3 +4,4 @@ markers =
 filterwarnings =
     ignore:.*`allow_functions` is deprecated.*:DeprecationWarning
     ignore:.*Importing 'itsdangerous.json' is deprecated and will .*:DeprecationWarning
+    ignore:.*'jinja2.escape' is deprecated and will.*:DeprecationWarning
